--- a/zuul-netflix-webapp/build.gradle
+++ b/zuul-netflix-webapp/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     providedCompile 'junit:junit-dep:4.10'
 }
 
+task wrapper(type: Wrapper){
+    gradleVersion = '3.1'
+}
+
 javadoc {
     options {
         doclet = "org.benjchristensen.doclet.DocletExclude"
