--- a/zuul-simple-webapp/build.gradle
+++ b/zuul-simple-webapp/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 
 }
 
+task wrapper(type: Wrapper){
+    gradleVersion = '3.1'
+}
+
 eclipse {
   classpath {
         downloadSources = true
